# logram

./: .cursorrules  .gitignore  CLAUDE.md  LOGRAM_AGENT_RULES.md  README.md  pyproject.toml
logram/: __init__.py  analysis.py  cli.py  context.py  decorators.py  mcp_server.py  metrics.py  oracle.py  serializer.py  storage.py  theme.py  versioning.py
logram/server/: README.md  __init__.py  app.py  models.py
